# phox

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: test.yml
editor/nvim/ftdetect/: phox.lua
editor/nvim/ftplugin/: phox.lua
editor/nvim/plugin/: phox.lua
editor/nvim/queries/phox/: highlights.scm
examples/: case_lit.px  higher_order.px  identity.px  if_else.px  let_basic.px  linked_list.px  nat.px  nested_record.px  pi_simple.px  polymorphic.px  record.px  record_typed.px  test.px  variant.px
src/: ast.rs  elaborate.rs  error.rs  format.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs
std/: prelude.px
tests/: eval_tests.rs
tests/fixtures/: cycle_a.px  cycle_b.px  import_test.px  stdlib_test.px  utils.px
tree-sitter-phox/: grammar.js  package.json  tree-sitter.json
tree-sitter-phox/queries/: highlights.scm
tree-sitter-phox/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-phox/test/corpus/: expressions.txt  literals.txt
