[package]
name = "phox"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "phox"
path = "src/main.rs"

[lib]
name = "phox"
path = "src/lib.rs"

[features]
default = ["format", "lsp"]
format = []
lsp = ["dep:tower-lsp", "dep:tokio", "dep:serde_json"]

[dependencies]
ariadne = "0.5"
clap = { version = "4", features = ["derive"] }
logos = "0.16"
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
pretty_assertions = "1"
